<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/welcome_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text2"
        android:textColor="@color/material_on_background_disabled"
        app:layout_constraintStart_toStartOf="@+id/welcome_textView1"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView1"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email_text"
        android:textColorHint="@color/material_on_background_disabled"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/welcome_textView2"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pw_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/pw_text"
        app:layout_constraintEnd_toEndOf="@+id/email_editText"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/email_editText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/forgot_pw_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/forgotPw_text"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/pw_editText"
        app:layout_constraintTop_toBottomOf="@+id/pw_editText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_pink"
        android:text="@string/login_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/pw_editText"
        app:layout_constraintStart_toStartOf="@+id/pw_editText"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pw_button" />

    <Button
        android:id="@+id/fb_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/fb_text"
        android:textColor="@color/fb_blue"
        app:icon="@drawable/ic_icons_facebook"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/pw_editText"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fb_button"
        app:layout_constraintStart_toStartOf="@+id/fb_button"
        app:layout_constraintTop_toBottomOf="@+id/fb_button">

        <TextView
            android:id="@+id/newUser_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/newUser_text"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/newUser_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:paddingStart="4dp"
            android:text="@string/signUp_text"
            android:textColor="@color/pink" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>